--- a/notebooks/004-Scrapy-scraping.ipynb
+++ b/notebooks/004-Scrapy-scraping.ipynb
@@ -13,11 +13,44 @@
    "source": [
     "Advanced library for scraping written in Python. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scrapy\n",
+    "import subprocess"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r = scrapy.Request('https://www.worldometers.info/world-population/population-by-country/')\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "scrape-env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
