update scrapy notes

--- a/notebooks/004-Scrapy-scraping.ipynb
+++ b/notebooks/004-Scrapy-scraping.ipynb
@@ -11,26 +11,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Advanced library for scraping written in Python. "
+    "Scrapy is a powerful Python framework designed for web scraping. It provides a structured way to extract data from websites, handle navigation, and store the scraped information."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import scrapy\n",
-    "import subprocess"
+    "Installation\n",
+    "\n",
+    "```pip install scrapy```"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "r = scrapy.Request('https://www.worldometers.info/world-population/population-by-country/')\n"
+    "new project\n",
+    "\n",
+    "```scrapy startproject [project name]```  \n",
+    "```cd [project name]```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "new spider\n",
+    "\n",
+    "```scrapy genspider [spider name] [domain]```\n"
    ]
   }
  ],
